objects/FieloSVY__SurveyTag__c.object
<CustomObject>
    <fields>
        <fullName>FieloSVY__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>FieloSVY__Survey__c</referenceTo>
        <relationshipLabel>Survey Tags</relationshipLabel>
        <relationshipName>SurveyTags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>FieloEE__Tag__c</referenceTo>
        <relationshipLabel>Survey Tags</relationshipLabel>
        <relationshipName>Survey_Tags</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Tag</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Survey Tags Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>